# DiffFinder

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_gui.cpp
UI_Design/: DiffFinder.glade  DiffFinder.glade~
include/: DiffFinder.hpp  DiffFinderAlgorithm1.hpp  DiffFinderAlgorithm2.hpp  DiffFinderAlgorithmBase.hpp
source/: CMakeLists.txt  DiffFinder.cpp  DiffFinderAlgorithm1.cpp  DiffFinderAlgorithm2.cpp
